package com.developsunghyun.iot_linker.Model.Data

class BluetoothDeviceData(
    var deviceName: String = "",
    var deviceAddress: String = "",
    var deviceAlias: String?,
    var deviceType: Int?
)