package com.developsunghyun.iot_linker.Model.Data

data class LayoutItem(
    var layoutType: String = "",
    var slotNumber: Int = 0,
    var module0: String = "",
    var module1: String = "",
    var module2: String = "",
    var module3: String = "",
    var module4: String = "",
    var module5: String = ""
)